--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,25 @@
 body{
     background-color: beige;
 }
+
+.container{
+    max-width: 1170px;
+    margin: 0 auto;
+    background-color: darkgray;
+}
+
+.userpic{
+    height: 150px;
+    width: auto;
+}
+
+nav{
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    height: 150px;
+}
+
+.name{
+    color: darkgreen;
+}
