--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,29 @@
     <title>{{title}}</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <h1>{{name}}</h1>
+    <div class="container">
+        <nav>
+            <div class="userpic">
+                <img src="/image/scai.jpg" alt="userPic" style="height: 100%">
+            </div>
+            <div class="name">
+                <ion-icon name="person-outline"></ion-icon>
+                <h1>{{name}}</h1>
+            </div>
+            <div class="title">
+                <p1>Software Engineer</p1>
+                <p1>Web Designer</p1>
+            </div>
+            <div class="link"></div>
+        </nav>
+    </div>
+
+
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
+
 </html>
