--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,15 +15,22 @@
             <div class="userpic">
                 <img src="/image/scai.jpg" alt="userPic" style="height: 100%">
             </div>
-            <div class="name">
-                <ion-icon name="person-outline"></ion-icon>
+            <div class="userdetail">
                 <h1>{{name}}</h1>
+                <span>Software Engineer
+                    <br>Web Designer
+                </span>
+                
             </div>
-            <div class="title">
-                <p1>Software Engineer</p1>
-                <p1>Web Designer</p1>
+            <div class="work">
+                <ion-icon name="laptop-outline"></ion-icon>
             </div>
-            <div class="link"></div>
+            <div class="link">
+                <ion-icon name="link-outline"></ion-icon>
+            </div>
+            <div class="contact">
+                <ion-icon name="mail-open-outline"></ion-icon>
+            </div>
         </nav>
     </div>
 
