--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -20,7 +22,7 @@
                 <span>Software Engineer
                     <br>Web Designer
                 </span>
-                
+
             </div>
             <div class="work">
                 <ion-icon name="laptop-outline"></ion-icon>
@@ -34,6 +36,20 @@
         </nav>
     </div>
 
+    <div class="introduction">
+        <h1>Hi!</h1>
+        <p>{{introduction}}</p>
+    </div>
+
+    <div class="exp">
+        <header>
+            <ion-icon name="tv-outline"></ion-icon>
+            <p>Experience</p>
+        </header>
+        <div class="solari">
+
+        </div>
+    </div>
 
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
