--- a/views/index.hbs
+++ b/views/index.hbs
@@ -40,16 +40,37 @@
         <h1>Hi!</h1>
         <p>{{introduction}}</p>
     </div>
-
     <div class="exp">
-        <header>
-            <ion-icon name="tv-outline"></ion-icon>
-            <p>Experience</p>
-        </header>
-        <div class="solari">
-
+        <div class="title">
+            <h1><ion-icon name="document-text-outline"></ion-icon>Employment</h1>
+        </div>
+        <div class="work_exp">
+            <img src="/image/solari.png" style="margin:0px 10px 0px 10px; height:35px">
+            <h1>SolariCorp - Software Engineer</h1>
+        </div>
+        <p>July 2017 - Current</p>
+            <ul class="details">
+                <li>{{detail1}}</li>
+                <li>{{detail2}}</li>
+                <li>{{detail3}}</li>
+            </ul>
+    </div>
+    <div class="edu">
+        <div class="title">
+            <h1><ion-icon name="school-outline"></ion-icon> Education</h1>
+            <div class="stjohns">
+                <img src="/image/sjlogo.png" style="height: 35px; margin:0px 10px 0px 10px">
+                <h2>St.John's University</h2>
+            </div>
+            <p>Sept. 2015 - May 2019</p>
+            <ul class="project">
+                <li>Computer Science - Bachlor's Degree</li>
+            </ul>
+            
         </div>
     </div>
+
+    
 
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
