--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,12 +24,15 @@
                 </span>
 
             </div>
-            <div class="work">
-                <ion-icon name="laptop-outline"></ion-icon>
+            <div class="resume">
+                <a href="/resume">
+                <ion-icon name="list-outline"></ion-icon>
+                </a>
             </div>
             <div class="link">
                 <ion-icon name="link-outline"></ion-icon>
             </div>
+
             <div class="contact">
                 <ion-icon name="mail-open-outline"></ion-icon>
             </div>
@@ -42,22 +45,26 @@
     </div>
     <div class="exp">
         <div class="title">
-            <h1><ion-icon name="document-text-outline"></ion-icon>Employment</h1>
+            <h1>
+                <ion-icon name="document-text-outline"></ion-icon>Employment
+            </h1>
         </div>
         <div class="work_exp">
             <img src="/image/solari.png" style="margin:0px 10px 0px 10px; height:35px">
             <h1>SolariCorp - Software Engineer</h1>
         </div>
         <p>July 2017 - Current</p>
-            <ul class="details">
-                <li>{{detail1}}</li>
-                <li>{{detail2}}</li>
-                <li>{{detail3}}</li>
-            </ul>
+        <ul class="details">
+            <li>{{detail1}}</li>
+            <li>{{detail2}}</li>
+            <li>{{detail3}}</li>
+        </ul>
     </div>
     <div class="edu">
         <div class="title">
-            <h1><ion-icon name="school-outline"></ion-icon> Education</h1>
+            <h1>
+                <ion-icon name="school-outline"></ion-icon> Education
+            </h1>
             <div class="stjohns">
                 <img src="/image/sjlogo.png" style="height: 35px; margin:0px 10px 0px 10px">
                 <h2>St.John's University</h2>
@@ -66,11 +73,11 @@
             <ul class="project">
                 <li>Computer Science - Bachlor's Degree</li>
             </ul>
-            
+
         </div>
     </div>
 
-    
+
 
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
